--- a/app/styles/home/_sections.scss
+++ b/app/styles/home/_sections.scss
@@ -1,10 +1,24 @@
 #home {
+    display: table;
     article {
-        height: 500px;
+        display: table-row;
+        div {
+            display: table-cell;
+            height: 600px;
+            vertical-align: middle;
+            text-align: center;
+        }
         h2 {
-            font-size: 140px;
+            margin: 0;
+            font-size: 120px;
+            &:after {
+                display: block;
+                margin-top: -60px;
+                content: '...';
+            }
         }
         p {
+            margin: 0;
             font-size: 40px;
         }
     }
