--- a/app/styles/header/_container.scss
+++ b/app/styles/header/_container.scss
@@ -1,18 +1,25 @@
 header {
+    top: 0px;
     position: fixed;
-    top: 0;
     left: 0;
     padding: 0 50px;
     width: 100%;
     height: 100px;
-    background-color: rgba(255,255,255,0.75);
+    background-color: rgba(255,255,255,0.95);
+    @include opacity(0);
+    @include transition();
 
     h1 {
         float: left;
         margin: 0;
         padding-top: 50px;
-        font-size: 20px;
+        font-size: 24px;
         line-height: 50px;
+    }
+
+    &.active {
+        @include opacity(0.95);
+
     }
 
 }
