--- a/app/styles/header/_container.scss
+++ b/app/styles/header/_container.scss
@@ -1,25 +1,34 @@
 header {
     top: 0px;
-    position: fixed;
+    position: absolute;
     left: 0;
     padding: 0 50px;
     width: 100%;
-    height: 100px;
-    background-color: rgba(255,255,255,0.95);
+    height: 70px;
+    background-color: $color-white;
+    border-bottom: 1px solid $color-grey;
+    border-top: 1px solid $color-grey;
+    @include transition(opacity);
     @include opacity(0);
-    @include transition();
 
     h1 {
         float: left;
         margin: 0;
-        padding-top: 50px;
-        font-size: 24px;
-        line-height: 50px;
+        font-size: $size-small;
+        line-height: 70px;
+        span {
+            font-size: $size-normal;
+            font-family: $font-bold;
+        }
     }
 
     &.active {
-        @include opacity(0.95);
+        @include opacity(0.9);
+    }
 
+    &.fixed {
+        position: fixed;
+        top: 0px !important;
     }
 
 }
