--- a/app/styles/vars/_colors.scss
+++ b/app/styles/vars/_colors.scss
@@ -2,7 +2,7 @@
 $color-white  : #ffffff;
 $color-black  : #333333;
 $color-green  : #C2D53F;
-$color-gray   : #D6D6D6;
+$color-grey   : #D6D6D6;
 $color-yellow : #FFC300;
 $color-blue   : #02C6C6;
 $color-red    : #E8A0B8;
