--- a/app/styles/vars/_compass-config.scss
+++ b/app/styles/vars/_compass-config.scss
@@ -1,3 +1,3 @@
 // Transitions
-$default-transition-duration: 1000ms;
-$default-transition-function: ease-out;
+$default-transition-duration: 300ms;
+$default-transition-function: cubic-bezier(0.165, 0.84, 0.44, 1);
