Using Helvetica Neue as font

--- a/app/styles/helpers/_classes.scss
+++ b/app/styles/helpers/_classes.scss
@@ -7,7 +7,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: $color-white;
+    background-color: $color-light;
 }
 .loaded {
    #loading-container {
