--- a/app/styles/home/_exploring.scss
+++ b/app/styles/home/_exploring.scss
@@ -1,10 +1,10 @@
 #home-exploring {
     &.active {
         h2 {
-            color: $color-black;
+            color: $color-dark;
         }
         p {
-            color: $color-black;
+            color: $color-dark;
         }
     }
 
