--- a/app/styles/vars/_colors.scss
+++ b/app/styles/vars/_colors.scss
@@ -1,8 +1,5 @@
 // Colors
-$color-white  : #ffffff;
-$color-black  : #333333;
-$color-green  : #C2D53F;
-$color-grey   : #D6D6D6;
-$color-yellow : #FFC300;
-$color-blue   : #02C6C6;
-$color-red    : #E8A0B8;
+$color-light     : #ffffff;
+$color-dim       : #D6D6D6;
+$color-dark      : #333333;
+$color-highlight : #ff796a;
