--- a/app/styles/_master.scss
+++ b/app/styles/_master.scss
@@ -1,10 +1,12 @@
 * {
     box-sizing: border-box;
-    font-weight: normal;
 }
 
 body {
-    font-family: $font-normal;
-    color: $color-black;
+    font-family: $font-family;
+    font-weight: 200;
+    color: $color-dark;
+
+    // todo: test
     padding-bottom: 1000px;
 }
