--- a/app/styles/header/_container.scss
+++ b/app/styles/header/_container.scss
@@ -5,9 +5,9 @@ header {
     padding: 0 50px;
     width: 100%;
     height: 70px;
-    background-color: $color-white;
-    border-bottom: 1px solid $color-grey;
-    border-top: 1px solid $color-grey;
+    background-color: $color-light;
+    border-bottom: 1px solid $color-dim;
+    border-top: 1px solid $color-dim;
     @include transition(opacity);
     @include opacity(0);
 
@@ -18,7 +18,7 @@ header {
         line-height: 70px;
         span {
             font-size: $size-normal;
-            font-family: $font-bold;
+            font-weight: $font-weight-normal;
         }
     }
 
