--- a/app/styles/header/_navigation.scss
+++ b/app/styles/header/_navigation.scss
@@ -1,21 +1,23 @@
 header {
     nav {
         float: right;
-        font-size: $size-small;
         a {
             line-height: 20px;
             height: 20px;
             position: relative;
-            color: $color-black;
+            color: $color-dark;
             text-decoration: none;
             margin: 25px 10px;
             display: inline-block;
             overflow: hidden;
+            text-transform: lowercase;
+            font-size: $size-small;
+            font-weight: bold;
             span {
                 position: relative;
                 height: 20px;
                 top: 0%;
-                text-shadow: 0px 20px 0px $color-red;
+                text-shadow: 0px 20px 0px $color-highlight;
                 @include single-transition(top);
             }
             &.active, &:hover {
