--- a/app/styles/vars/_fonts.scss
+++ b/app/styles/vars/_fonts.scss
@@ -1,7 +1,26 @@
-$font-normal : 'HelveticaNeueW01-45Ligh';
-$font-bold   : 'HelveticaNeueW01-75Bold';
-
-// fonts.com logo
-#mti_wfs_colophon {
-    display: none !important;
+@font-face {
+  font-family: 'Helvetica Neue Webfont';
+  src: url('/styles/fonts/HelveticaNeueLight.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/HelveticaNeueLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/HelveticaNeueLight.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/HelveticaNeueLight.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/HelveticaNeueLight.svg#7384ecabcada72f0e077cd45d8e1c705') format('svg'); /* Legacy iOS */
+       
+  font-style:   normal;
+  font-weight:  200;
 }
+
+@font-face {
+  font-family: 'Helvetica Neue Webfont';
+  src: url('/styles/fonts/HelveticaNeueBold.eot'); /* IE9 Compat Modes */
+  src: url('/styles/fonts/HelveticaNeueBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/styles/fonts/HelveticaNeueBold.woff') format('woff'), /* Modern Browsers */
+       url('/styles/fonts/HelveticaNeueBold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/styles/fonts/HelveticaNeueBold.svg#b0b230b12ba14b2f0690df366df880c5') format('svg'); /* Legacy iOS */
+       
+  font-style:   bold;
+  font-weight:  700;
+}
+
+$font-family: "Helvetica Neue", "Helvetica Neue Webfont", Helvetica, Arial, "Lucida Grande", sans-serif;
+$font-weight-normal: 200;
