--- a/app/styles/home/home.scss
+++ b/app/styles/home/home.scss
@@ -1,4 +1,4 @@
-@import 'home/container';
-@import 'home/sections';
-@import 'home/hi';
-@import 'home/exploring';
+@import 'container';
+@import 'sections';
+@import 'hi';
+@import 'exploring';
