--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 // Scaffolding
 @import 'helpers/helpers';
 @import 'master';
+@import 'typography/typography';
 
 // Navigation
 @import 'header/header';
@@ -15,9 +16,6 @@
 // Pages
 @import 'home/home';
 
-.browsehappy {
-    margin: 0.2em 0;
-    padding: 0.2em 0;
-    background: #ccc;
-    color: #000;
-}
+// Test
+@import 'test';
+
