--- a/app/styles/vars/vars.scss
+++ b/app/styles/vars/vars.scss
@@ -1,4 +1,5 @@
-@import 'vars/compass-config';
-@import 'vars/colors';
-@import 'vars/fonts';
-@import 'vars/sizes';
+@import 'helpers';
+@import 'compass-config';
+@import 'colors';
+@import 'fonts';
+@import 'sizes';
