--- a/app/styles/_master.scss
+++ b/app/styles/_master.scss
@@ -2,11 +2,9 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: $font-family;
-    font-weight: 200;
-    color: $color-dark;
-
-    // todo: test
-    padding-bottom: 1000px;
+.browsehappy {
+    margin: 0.2em 0;
+    padding: 0.2em 0;
+    background: #ccc;
+    color: #000;
 }
