--- a/app/styles/header/_container.scss
+++ b/app/styles/header/_container.scss
@@ -2,20 +2,21 @@ header {
     top: 0px;
     position: absolute;
     left: 0;
-    padding: 0 50px;
+    padding: 0 $size-baseline*2;
     width: 100%;
-    height: 70px;
+    height: $size-baseline*2.5;
     background-color: $color-light;
     border-bottom: 1px solid $color-dim;
     border-top: 1px solid $color-dim;
-    @include transition(opacity);
+    @include single-transition(opacity);
     @include opacity(0);
 
     h1 {
         float: left;
         margin: 0;
         font-size: $size-small;
-        line-height: 70px;
+        line-height: $size-baseline*2.5;
+        padding: 0;
         span {
             font-size: $size-normal;
             font-weight: $font-weight-normal;
