--- a/app/styles/home/_hi.scss
+++ b/app/styles/home/_hi.scss
@@ -1,11 +1,20 @@
 #home-hi {
-    &.active {
-        h2 {
-            color: $color-dark;
-        }
-        p {
-            color: $color-dark;
-        }
+    display: block !important;
+    div {
+        display: block !important;
+        height: 50%;
+        padding: 0 !important;
     }
-
+}
+#portrait-image {
+    position: relative;
+    .image {
+        @include single-transition(height, 10ms, linear);
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background: url(/images/portrait.jpg) center center no-repeat;
+        background-size: cover;  
+    }
 }
