--- a/app/styles/vars/_fonts.scss
+++ b/app/styles/vars/_fonts.scss
@@ -1,26 +1,28 @@
 @font-face {
-  font-family: 'Helvetica Neue Webfont';
-  src: url('/styles/fonts/HelveticaNeueLight.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/HelveticaNeueLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/HelveticaNeueLight.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/HelveticaNeueLight.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/HelveticaNeueLight.svg#7384ecabcada72f0e077cd45d8e1c705') format('svg'); /* Legacy iOS */
+    font-family : 'Helvetica Neue Webfont';
+    src         : url('/styles/fonts/HelveticaNeue-Light-Optimized.eot'); /* IE9 Compat Modes */
+    src         : url('/styles/fonts/HelveticaNeue-Light-Optimized.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                  url('/styles/fonts/HelveticaNeue-Light-Optimized.woff') format('woff'), /* Modern Browsers */
+                  url('/styles/fonts/HelveticaNeue-Light-Optimized.ttf')  format('truetype'), /* Safari, Android, iOS */
+                  url('/styles/fonts/HelveticaNeue-Light-Optimized.svg#7384ecabcada72f0e077cd45d8e1c705') format('svg'); /* Legacy iOS */
        
-  font-style:   normal;
-  font-weight:  200;
+    font-style  : normal;
+    font-weight : 200;
 }
 
 @font-face {
-  font-family: 'Helvetica Neue Webfont';
-  src: url('/styles/fonts/HelveticaNeueBold.eot'); /* IE9 Compat Modes */
-  src: url('/styles/fonts/HelveticaNeueBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/styles/fonts/HelveticaNeueBold.woff') format('woff'), /* Modern Browsers */
-       url('/styles/fonts/HelveticaNeueBold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('/styles/fonts/HelveticaNeueBold.svg#b0b230b12ba14b2f0690df366df880c5') format('svg'); /* Legacy iOS */
+    font-family : 'Helvetica Neue Webfont';
+    src         : url('/styles/fonts/HelveticaNeue-Bold-Optimized.eot'); /* IE9 Compat Modes */
+    src         : url('/styles/fonts/HelveticaNeue-Bold-Optimized.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                  url('/styles/fonts/HelveticaNeue-Bold-Optimized.woff') format('woff'), /* Modern Browsers */
+                  url('/styles/fonts/HelveticaNeue-Bold-Optimized.ttf')  format('truetype'), /* Safari, Android, iOS */
+                  url('/styles/fonts/HelveticaNeue-Bold-Optimized.svg#b0b230b12ba14b2f0690df366df880c5') format('svg'); /* Legacy iOS */
        
-  font-style:   bold;
-  font-weight:  700;
+    font-style  : bold;
+    font-weight : 700;
 }
 
 $font-family: "Helvetica Neue", "Helvetica Neue Webfont", Helvetica, Arial, "Lucida Grande", sans-serif;
+
 $font-weight-normal: 200;
+$font-weight-bold: 700;
