--- a/app/styles/home/_hi.scss
+++ b/app/styles/home/_hi.scss
@@ -14,7 +14,7 @@
         bottom: 0;
         width: 100%;
         height: 100%;
-        background: url(/images/portrait.jpg) center center no-repeat;
+        background: url(/images/portrait2.jpg) center center no-repeat;
         background-size: cover;  
     }
 }
