--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,5 +10,12 @@
 <body>
 	{{{body}}} 
     <script src="/scripts/app.js"></script>
+
+    {{#if development}}
+		<script>document.write('<script src="http://'
+			+ (location.host || 'localhost').split(':')[0]
+		    + ':35729/livereload.js?snipver=1"></'
+		    + 'script>')</script>
+    {{/if}}
 </body>
 </html>
