--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
 <h1>Employ me at DesignIt</h1>
-<p>Her er noget tekst</p>
+
+<div class="hexagon" style="background-image:url(images/test.jpg)">
+	<div class="hexagon__inner1"></div>
+	<div class="hexagon__inner2"></div>
+</div>
