--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,19 +1,20 @@
-@import 'scut/dist/scut', 
-		'inuit.css/inuit';
+@import "scut/dist/scut";
+@import "inuit.css/inuit";
 
 /*
 # Modules
 
 A hexagon container
 
-	<div class="hexagon" style="background-image:url(http://placehold.it/200x200)">
+	<div class="hexagon" style="background-image:url(http://placehold.it/220x220)">
 		<div class="hexagon__inner1"></div>
 		<div class="hexagon__inner2"></div>
 	</div>
- */
+*/
 .hexagon {
     position: relative;
     display: block;
+    margin: 54px 0;
     width: 190px;
     height: 110px;
     background-position: 50% 50%;
@@ -21,14 +22,17 @@ A hexagon container
     background-repeat: no-repeat;
     line-height: 220px;
 }
+
 .hexagon__inner1, .hexagon__inner2 {
     position: absolute;
     left: 0;
+    top: 0;
     z-index: -1;
     overflow: hidden;
     width: 100%;
     height: 100%;
     background: inherit;
+    -webkit-backface-visibility: hidden;
     &:before {
         position: absolute;
         left: 0;
@@ -36,10 +40,11 @@ A hexagon container
         width: 220px;
         height: 220px;
         background: inherit;
-        content:'';
+        content: '';
         transform-origin: 0 0;
     }
 }
+
 .hexagon__inner1 {
     transform: rotate(60deg);
     &:before {
@@ -47,10 +52,11 @@ A hexagon container
         transform: rotate(-60deg) translate(-110px, 0);
     }
 }
+
 .hexagon__inner2 {
     transform: rotate(-60deg);
     &:before {
         bottom: 0;
-        transform: rotate(60deg);
+        transform: rotate(60deg) translate(80px, -110px);
     }
 }
