--- a/docs/lib/styledocco-bootstrap-theme/docs.jade
+++ b/docs/lib/styledocco-bootstrap-theme/docs.jade
@@ -9,8 +9,8 @@ html
       else if title
         #{title}
     meta(charset='utf-8')
-    link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css')
-    link(rel='stylesheet', href='http://getbootstrap.com/docs-assets/css/docs.css')
+    link(rel='stylesheet', href='css/bootstrap.min.css')
+    link(rel='stylesheet', href='css/bootstrap-docs.css')
     if (resources.docs && resources.docs.css)
       style !{resources.docs.css}
     if (resources.previews && resources.previews.js)
@@ -54,5 +54,5 @@ html
                 !{section.docs}
     if (resources.docs && resources.docs.js)
       script !{resources.docs.js}
-    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-    script(src='http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js')
+    script(src='jquery.min.js')
+    script(src='js/bootstrap.min.js')
