--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,20 @@
-<h1>Employ me at DesignIt</h1>
+<div class="grid">
+	<div class="grid__item one-whole">
+		<h1>Employ me at DesignIt</h1>
 
-<div class="hexagon" style="background-image:url(images/test.jpg)">
-	<div class="hexagon__inner1"></div>
-	<div class="hexagon__inner2"></div>
+		<div class="hexagon" style="background-image:url(images/test.jpg)">
+			<div class="hexagon__inner1"></div>
+			<div class="hexagon__inner2"></div>
+		</div>
+	</div>
+	<div class="grid__item one-half">
+		<p class="highlight">1:2</p>
+	</div><div class="grid__item one-half">
+		<p class="highlight">1:2</p>
+	</div><div class="grid__item one-half">
+		<p class="highlight">1:2</p>
+	</div><div class="grid__item one-half">
+		<p class="highlight">1:2</p>
+	</div>
 </div>
+
