--- a/docs/lib/doxx-template.jade
+++ b/docs/lib/doxx-template.jade
@@ -8,7 +8,7 @@ doctype 5
 html
   head
     meta(name='viewport', content='width=device-width', charset='utf-8')
-    title= title
+    title Javascript Documentation
     link(rel="stylesheet", href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css")
     link(rel="stylesheet", href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css")
     link(rel="stylesheet", href="http://getbootstrap.com/2.3.2/assets/css/docs.css")
@@ -50,15 +50,9 @@ html
     div.navbar.navbar-inverse.navbar-fixed-top
       div.navbar-inner
         div.container
-          a.brand Doxx
+          a.brand Javascript Documentation
           div.nav-collapse.collapse
             ul.nav.pull-right.sponsored
-
-
-    header.jumbotron.subhead#overview
-      div.container
-        h1= title
-        p.lead
 
     .container
       .row
@@ -124,18 +118,6 @@ html
               p
                 iframe(width="100%", height="300", src=symbol.jsfiddle , allowfullscreen="allowfullscreen", frameborder="0")
 
-    footer.footer
-      div.container
-        p Documentation generated with 
-          a(href="https://github.com/FGRibreau/doxx") Doxx 
-          | created by 
-          a.twitter-follow-button(href='https://twitter.com/FGRibreau',data-show-count='false') Francois-Guillaume Ribreau
-        p Doxx is sponsored by 
-          a.bringr(href='http://bringr.net/?btt', title="Outil d'analyse des réseaux sociaux") Bringr 
-          | and 
-          a.redsmin(href='https://redsmin.com/?btt', title="Full Redis GUI") Redsmin
-        p Theme borrowed from Twitter Bootstrap
-
     script(src="http://platform.twitter.com/widgets.js")
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js")
     script(src="http://leaverou.github.com/prefixfree/prefixfree.js")
@@ -162,7 +144,7 @@ html
         var $window = $(window);
         $('.scrollspy .nav').affix({
           offset: {
-            top: function () { return $window.width() <= 980 ? 480 : 400 }
+            top: function () { return $window.width() <= 980 ? 280 : 200 }
           , bottom: 50
           }
         });
