--- a/docs/lib/styledocco-bootstrap-theme/docs.jade
+++ b/docs/lib/styledocco-bootstrap-theme/docs.jade
@@ -56,3 +56,5 @@ html
       script !{resources.docs.js}
     script(src='jquery.min.js')
     script(src='js/bootstrap.min.js')
+    script.
+      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35732/livereload.js?snipver=1"></' + 'script>')
