--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,19 +2,89 @@
 	<div class="grid__item one-whole">
 		<h1>Employ me at DesignIt</h1>
 
-		<div class="hexagon" style="background-image:url(images/test.jpg)">
-			<div class="hexagon__inner1"></div>
-			<div class="hexagon__inner2"></div>
+		<div class="hexagon-grid">
+
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(images/test.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
+			<div class="hexagon hexagon-grid__item" style="background-image:url(http://qibla.com/uploads/2012/07/LMT102-220x220.jpg)">
+				<div class="hexagon__inner1"></div>
+				<div class="hexagon__inner2"></div>
+			</div>
 		</div>
-	</div>
-	<div class="grid__item one-half">
-		<p class="highlight">1:2</p>
-	</div><div class="grid__item one-half">
-		<p class="highlight">1:2</p>
-	</div><div class="grid__item one-half">
-		<p class="highlight">1:2</p>
-	</div><div class="grid__item one-half">
-		<p class="highlight">1:2</p>
 	</div>
 </div>
 
