--- a/app/styles/base/_vars.scss
+++ b/app/styles/base/_vars.scss
@@ -1,8 +1,7 @@
 /*
-# Defaults
+# Variables
 
-inuit.css’ default variables. Redefine these in your `_vars.scss` file (found
-in the inuit.css-web-template) to override them.
+Override inuit.css’ default variables.
 
 # Debug
 
@@ -10,9 +9,7 @@ Debug mode will visually highlight any potential markup/accessibility quirks
 in the browser. Set to `true` or `false`.
 
 `$debug-mode: false`
-*/
-$debug-mode: false;
-/*
+
 # Border-box
 Do you want all elements to adopt `box-sizing:border-box;` as per
 [paulirish.com/2012/box-sizing-border-box-ftw](paulirish.com/2012/box-sizing-border-box-ftw)
@@ -33,7 +30,7 @@ Do you want all elements to adopt `box-sizing:border-box;` as per
 
 ## Default colour for objects’ borders etc.
 
-`$base-ui-color: #ccc;
+`$base-ui-color: #ccc;`
 
 # Responsive
 
@@ -149,7 +146,7 @@ Which objects and abstractions would you like to use?
 
 `$use-grids:         true;`
 */
-$use-grids: true;
+$use-grids: true; // default: false;
 /*
 
 `$use-flexbox:       false;`
