--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{title}}</title>
 
         <link rel="stylesheet" href="/styles/main.css">
         <script src="/scripts/head.js"></script>
 </head>
 <body>
-	{{{body}}} 
+	{{{body}}}
     <script src="/scripts/app.js"></script>
 
     {{#if development}}
