--- a/docs/lib/doxx-template.jade
+++ b/docs/lib/doxx-template.jade
@@ -108,15 +108,7 @@ html
                         td= tag.types
                         td= tag.description
 
-            .description !{symbol.description.full} !{symbol.description.extra}
-            if symbol.code
-              pre
-                code.language-javascript
-                  = symbol.code
-            if symbol.jsfiddle
-              h5 jsFiddle
-              p
-                iframe(width="100%", height="300", src=symbol.jsfiddle , allowfullscreen="allowfullscreen", frameborder="0")
+            .description.language-javascript !{symbol.description.full} !{symbol.description.extra}
 
     script(src="http://platform.twitter.com/widgets.js")
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js")
